rename to pss-operator

--- a/helm/template-operator/values.yaml
+++ b/helm/template-operator/values.yaml
@@ -1,7 +1,7 @@
 registry:
   domain: docker.io
 image:
-  name: "giantswarm/template-operator"
+  name: "giantswarm/pss-operator"
   tag: "[[ .Version ]]"
 pod:
   user:
