--- a/helm/template-operator/Chart.yaml
+++ b/helm/template-operator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: "v1"
 appVersion: "[[ .AppVersion ]]"
-description: "Chart holding template-operator."
-home: "https://github.com/giantswarm/template-operator"
-name: "template-operator"
+description: "Chart holding pss-operator."
+home: "https://github.com/giantswarm/pss-operator"
+name: "pss-operator"
 version: "[[ .Version ]]"
