--- a/helm/pss-operator/templates/rbac.yaml
+++ b/helm/pss-operator/templates/rbac.yaml
@@ -6,11 +6,13 @@ metadata:
     {{- include "labels.common" . | nindent 4 }}
 rules:
   - apiGroups:
-      - ""
+      - cluster.x-k8s.io
     resources:
-      - pods
+      - clusters
     verbs:
-      - "*"
+      - get
+      - list
+      - watch
   - apiGroups:
       - ""
     resources:
@@ -22,6 +24,7 @@ rules:
       - delete
       - get
       - list
+      - patch
   - apiGroups:
       - ""
     resources:
