label apps to force admission checks

--- a/helm/pss-operator/templates/rbac.yaml
+++ b/helm/pss-operator/templates/rbac.yaml
@@ -12,6 +12,12 @@ rules:
     verbs:
       - "*"
   - apiGroups:
+      - application.giantswarm.io
+    resources:
+      - apps
+    verbs:
+      - "*"
+  - apiGroups:
       - ""
     resources:
       - configmaps
