rename resources to get rid of TODO/Test names

--- a/helm/pss-operator/templates/secret.yaml
+++ b/helm/pss-operator/templates/secret.yaml
@@ -6,8 +6,4 @@ metadata:
   labels:
     {{- include "labels.common" . | nindent 4 }}
 stringData:
-  secret.yaml: |
-    service:
-      todo:
-        structure:
-          token: "xyz"
+  secret.yaml: "{}"
