--- a/helm/pss-operator/Chart.yaml
+++ b/helm/pss-operator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: "v1"
 appVersion: "[[ .AppVersion ]]"
-description: "Chart holding pss-operator."
+description: "Chart holding pss-operator. See https://github.com/giantswarm/giantswarm/issues/28242"
 home: "https://github.com/giantswarm/pss-operator"
 name: "pss-operator"
 version: "[[ .Version ]]"
