--- a/helm/pss-operator/values.yaml
+++ b/helm/pss-operator/values.yaml
@@ -30,5 +30,6 @@ securityContext:
   seccompProfile:
     type: RuntimeDefault
 
-podSecurityStandards:
-  enforced: false
+global:
+  podSecurityStandards:
+    enforced: false
