--- a/helm/pss-operator/values.yaml
+++ b/helm/pss-operator/values.yaml
@@ -29,3 +29,7 @@ securityContext:
   runAsNonRoot: true
   seccompProfile:
     type: RuntimeDefault
+
+global:
+  podSecurityStandards:
+    enforced: false
