--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -1,21 +1,16 @@
-# Hashicorp consul /api and /sdk are no longer intended for public use and don't have newer tags.
-# Waiting for direct dependencies to move away from them.
-CVE-2022-29153 until=2022-12-03
-CVE-2022-24687 until=2022-12-03
-
-# pkg:golang/github.com/kataras/iris/v12@v12.1.8
-CVE-2021-23772 until=2022-12-03
-
-# pkg:golang/github.com/urfave/negroni@v1.0.0
-sonatype-2021-1485 until=2022-12-03
-
-# pkg:golang/github.com/caddyserver/caddy@v1.0.3
-# Can't be updated without updating GS and K8s dependencies using newer logr version.
-CVE-2022-29718 until=2022-12-03
-
-# pkg:golang/github.com/lucas-clemente/quic-go@v0.10.2
-# Upgrading to the current latest of v0.28.0 has the same issue
-CVE-2022-30591 until=2022-12-03
-
-# pkg:golang/github.com/labstack/echo/v4@v4.7.2
-sonatype-2022-5436 until=2022-12-03
+CVE-2020-8561 
+CVE-2021-23772 
+CVE-2021-41803 
+CVE-2022-24450
+CVE-2022-24687
+CVE-2022-26652
+CVE-2022-28357
+CVE-2022-29153 
+CVE-2022-29946
+CVE-2022-42708
+CVE-2022-42709
+CVE-2023-26125 
+CVE-2023-29401 
+CVE-2023-39325
+CVE-2023-46129
+CVE-2023-47090
