--- a/helm/pss-operator/templates/rbac.yaml
+++ b/helm/pss-operator/templates/rbac.yaml
@@ -6,22 +6,22 @@ metadata:
     {{- include "labels.common" . | nindent 4 }}
 rules:
   - apiGroups:
-      - ""
+      - cluster.x-k8s.io
     resources:
-      - pods
+      - clusters
     verbs:
-      - "*"
-  - apiGroups:
-      - ""
-    resources:
-      - configmaps
-      - namespaces
-    verbs:
-      - create
-      - update
-      - delete
       - get
       - list
+      - watch
+  - apiGroups:
+      - application.giantswarm.io
+    resources:
+      - apps
+    verbs:
+      - get
+      - list
+      - update
+      - patch
   - apiGroups:
       - ""
     resources:
@@ -67,7 +67,7 @@ roleRef:
   name: {{ include "resource.default.name"  . }}
   apiGroup: rbac.authorization.k8s.io
 ---
-{{- if .Capabilities.APIVersions.Has "policy/v1beta1/PodSecurityPolicy" }}
+{{- if not .Values.global.podSecurityStandards.enforced }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
