--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,3 +66,84 @@ workflows:
           filters:
             tags:
               only: /^v.*/
+
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-pss-operator-to-aws-app-collection
+          app_name: "pss-operator"
+          app_collection_repo: "aws-app-collection"
+          requires:
+            - push-pss-operator-to-aliyun
+            - push-pss-operator-to-control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-pss-operator-to-azure-app-collection
+          app_name: "pss-operator"
+          app_collection_repo: "azure-app-collection"
+          requires:
+            - push-pss-operator-to-control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-pss-operator-to-gcp-app-collection
+          app_name: "pss-operator"
+          app_collection_repo: "gcp-app-collection"
+          requires:
+            - push-pss-operator-to-control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-pss-operator-to-vsphere-app-collection
+          app_name: "pss-operator"
+          app_collection_repo: "vsphere-app-collection"
+          requires:
+            - push-pss-operator-to-control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-to-cloud-director-app-collection
+          app_name: "pss-operator"
+          app_collection_repo: "cloud-director-app-collection"
+          requires:
+            - push-pss-operator-to-control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-to-capa-app-collection
+          app_name: "pss-operator"
+          app_collection_repo: "capa-app-collection"
+          requires:
+            - push-pss-operator-to-aliyun
+            - push-pss-operator-to-control-plane-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
