--- a/helm/pss-operator/templates/deployment.yaml
+++ b/helm/pss-operator/templates/deployment.yaml
@@ -49,6 +49,7 @@ spec:
         - daemon
         - --config.dirs=/var/run/{{ include "name" . }}/configmap/
         - --config.files=config
+        - --provider={{ .Values.provider.kind }}
         volumeMounts:
         - name: {{ include "name" . }}-configmap
           mountPath: /var/run/{{ include "name" . }}/configmap/
