--- a/helm/pss-operator/Chart.yaml
+++ b/helm/pss-operator/Chart.yaml
@@ -1,5 +1,8 @@
-apiVersion: "v1"
+apiVersion: "v2"
 appVersion: "[[ .AppVersion ]]"
+annotations:
+  application.giantswarm.io/team: shield
+  config.giantswarm.io/version: 1.x.x
 description: "Chart holding pss-operator. See https://github.com/giantswarm/giantswarm/issues/28242"
 home: "https://github.com/giantswarm/pss-operator"
 name: "pss-operator"
