--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -14,3 +14,6 @@ CVE-2023-29401
 CVE-2023-39325
 CVE-2023-46129
 CVE-2023-47090
+
+# pkg:golang/google.golang.org/protobuf@v1.31.0
+CVE-2024-24786 until=2024-03-20
