--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,124 +6,132 @@ orbs:
 workflows:
   build:
     jobs:
-      - architect/go-build:
-          name: go-build
-          binary: pss-operator
-          filters:
-            tags:
-              only: /^v.*/
+    - architect/go-build:
+        name: go-build
+        binary: pss-operator
+        filters:
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-registries:
-          context: architect
-          name: push-to-registries
-          requires:
-            - go-build
-          filters:
-            tags:
-              only: /^v.*/
+    - architect/push-to-registries:
+        context: architect
+        name: push-to-registries
+        requires:
+        - go-build
+        filters:
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-catalog:
-          context: "architect"
-          name: push-pss-operator-to-control-plane-catalog
-          app_catalog: "control-plane-catalog"
-          app_catalog_test: "control-plane-test-catalog"
-          chart: "pss-operator"
-          requires:
-            - push-to-registries
-          filters:
-            tags:
-              only: /^v.*/
+          branches:
+            ignore:
+            - main
+            - master
+    - architect/push-to-app-catalog:
+        context: architect
+        name: push-pss-operator-to-control-plane-catalog
+        app_catalog: control-plane-catalog
+        app_catalog_test: control-plane-test-catalog
+        chart: pss-operator
+        requires:
+        - push-to-registries
+        filters:
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-pss-operator-to-aws-app-collection
-          app_name: "pss-operator"
-          app_collection_repo: "aws-app-collection"
-          requires:
-            - push-pss-operator-to-control-plane-catalog
-            - push-to-registries
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+          branches:
+            ignore:
+            - main
+            - master
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-pss-operator-to-aws-app-collection
+        app_name: pss-operator
+        app_collection_repo: aws-app-collection
+        requires:
+        - push-pss-operator-to-control-plane-catalog
+        - push-to-registries
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-pss-operator-to-azure-app-collection
-          app_name: "pss-operator"
-          app_collection_repo: "azure-app-collection"
-          requires:
-            - push-pss-operator-to-control-plane-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-pss-operator-to-azure-app-collection
+        app_name: pss-operator
+        app_collection_repo: azure-app-collection
+        requires:
+        - push-pss-operator-to-control-plane-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-pss-operator-to-gcp-app-collection
-          app_name: "pss-operator"
-          app_collection_repo: "gcp-app-collection"
-          requires:
-            - push-pss-operator-to-control-plane-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-pss-operator-to-gcp-app-collection
+        app_name: pss-operator
+        app_collection_repo: gcp-app-collection
+        requires:
+        - push-pss-operator-to-control-plane-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-pss-operator-to-vsphere-app-collection
-          app_name: "pss-operator"
-          app_collection_repo: "vsphere-app-collection"
-          requires:
-            - push-pss-operator-to-control-plane-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-pss-operator-to-vsphere-app-collection
+        app_name: pss-operator
+        app_collection_repo: vsphere-app-collection
+        requires:
+        - push-pss-operator-to-control-plane-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-to-cloud-director-app-collection
-          app_name: "pss-operator"
-          app_collection_repo: "cloud-director-app-collection"
-          requires:
-            - push-pss-operator-to-control-plane-catalog
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-to-cloud-director-app-collection
+        app_name: pss-operator
+        app_collection_repo: cloud-director-app-collection
+        requires:
+        - push-pss-operator-to-control-plane-catalog
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-to-capa-app-collection
-          app_name: "pss-operator"
-          app_collection_repo: "capa-app-collection"
-          requires:
-            - push-pss-operator-to-control-plane-catalog
-            - push-to-registries
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-to-capa-app-collection
+        app_name: pss-operator
+        app_collection_repo: capa-app-collection
+        requires:
+        - push-pss-operator-to-control-plane-catalog
+        - push-to-registries
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
 
-      - architect/push-to-app-collection:
-          context: architect
-          name: push-to-capz-app-collection
-          app_name: "pss-operator"
-          app_collection_repo: "capz-app-collection"
-          requires:
-            - push-pss-operator-to-control-plane-catalog
-            - push-to-registries
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+    - architect/push-to-app-collection:
+        context: architect
+        name: push-to-capz-app-collection
+        app_name: pss-operator
+        app_collection_repo: capz-app-collection
+        requires:
+        - push-pss-operator-to-control-plane-catalog
+        - push-to-registries
+        filters:
+          branches:
+            ignore: /.*/
+          tags:
+            only: /^v.*/
