--- a/helm/pss-operator/templates/deployment.yaml
+++ b/helm/pss-operator/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
         {{- end }}
       containers:
       - name: {{ include "name" . }}
-        image: "{{ .Values.registry.domain }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.registry.domain }}/{{ .Values.image.name }}:{{ include "image.tag" . }}"
         args:
         - daemon
         - --config.dirs=/var/run/{{ include "name" . }}/configmap/
