--- a/helm/pss-operator/values.yaml
+++ b/helm/pss-operator/values.yaml
@@ -6,7 +6,7 @@ registry:
 
 image:
   name: "giantswarm/pss-operator"
-  tag: "[[ .Version ]]"
+  tag: ~
 
 provider:
   kind: ""
@@ -16,9 +16,6 @@ pod:
     id: 1000
   group:
     id: 1000
-project:
-  branch: "[[ .Branch ]]"
-  commit: "[[ .SHA ]]"
 
 # Pod securityContext
 podSecurityContext:
