--- a/helm/pss-operator/templates/deployment.yaml
+++ b/helm/pss-operator/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
         {{- end }}
       containers:
       - name: {{ include "name" . }}
-        image: "{{ .Values.registry.domain }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.registry.domain }}/{{ .Values.image.name }}:{{ include "image.tag" . }}"
         args:
         - daemon
         - --config.dirs=/var/run/{{ include "name" . }}/configmap/
@@ -59,6 +59,9 @@ spec:
             port: 8000
           initialDelaySeconds: 30
           timeoutSeconds: 1
+        ports:
+        - containerPort: 8000
+          name: http
         resources:
           requests:
             cpu: 100m
